kubenetes/datadog-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    com.datadoghq.ad.logs: '[{"source": "datadog-agent", "service": "datadog-agent"}]'
    kompose.cmd: kompose convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: datadog
  name: datadog
spec:
  ports:
    - name: "8126"
      port: 8126
      targetPort: 8126
  selector:
    io.kompose.service: datadog
status:
  loadBalancer: {}
