kubenetes/frontend-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    com.datadoghq.ad.logs: '[{"source": "python", "service": "shop-frontend"}]'
    kompose.cmd: kompose convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend-app
  name: frontend-app
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: frontend-app
status:
  loadBalancer: {}
