kubenetes/k8-microservice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8-microservice-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-flask-microservices
  template:
    metadata:
      labels:
        app: python-flask-microservices
    spec:
      containers:
        - name: cfrontend-app
          image: ajitha1234/frontend:latest
          ports:
            - containerPort: 5000
        - name: cuser-service
          image: ajitha1234/userservice:latest
          ports:
            - containerPort: 5001
        - name: cuser_dbase
          image: mysql:8
          ports:
            - port: 32000
              targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: k8-microservice-deployment
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: python-flask-microservices
