kubenetes/order-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    com.datadoghq.ad.logs: '[{"source": "python", "service": "order-service"}]'
    kompose.cmd: kompose convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: order-api
  name: order-api
spec:
  ports:
    - name: "5003"
      port: 5003
      targetPort: 5003
  selector:
    io.kompose.service: order-api
status:
  loadBalancer: {}
