kubenetes/order-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    com.datadoghq.ad.logs: '[{"source": "mysql", "service": "order-mysql"}]'
    kompose.cmd: kompose convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: order-db
  name: order-db
spec:
  ports:
    - name: "32002"
      port: 32002
      targetPort: 3306
  selector:
    io.kompose.service: order-db
status:
  loadBalancer: {}
