kubenetes/product-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    com.datadoghq.ad.logs: '[{"source": "python", "service": "product-service"}]'
    kompose.cmd: kompose convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: product-api
  name: product-api
spec:
  ports:
    - name: "5002"
      port: 5002
      targetPort: 5002
  selector:
    io.kompose.service: product-api
status:
  loadBalancer: {}
