kubenetes/product-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    com.datadoghq.ad.logs: '[{"source": "mysql", "service": "product-mysql"}]'
    kompose.cmd: kompose convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: product-db
  name: product-db
spec:
  ports:
    - name: "32001"
      port: 32001
      targetPort: 3306
  selector:
    io.kompose.service: product-db
status:
  loadBalancer: {}
