kubenetes/user-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    com.datadoghq.ad.logs: '[{"source": "python", "service": "user-service"}]'
    kompose.cmd: kompose convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: user-api
  name: user-api
spec:
  ports:
    - name: "5001"
      port: 5001
      targetPort: 5001
  selector:
    io.kompose.service: user-api
status:
  loadBalancer: {}
