kubenetes/user-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    com.datadoghq.ad.logs: '[{"source": "mysql", "service": "user-mysql"}]'
    kompose.cmd: kompose convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: user-db
  name: user-db
spec:
  ports:
    - name: "32000"
      port: 32000
      targetPort: 3306
  selector:
    io.kompose.service: user-db
status:
  loadBalancer: {}
